--- a/app/src/main/res/layout/activity_hakkimizda.xml
+++ b/app/src/main/res/layout/activity_hakkimizda.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.mert.yemeklist.MainActivity">
+    tools:context="com.gun.mert.yemeklist.MainActivity">
 
 </android.support.constraint.ConstraintLayout>
